fix bleed so tablet acts like phone

--- a/src/components/SecondaryNav/secondary-nav.scss
+++ b/src/components/SecondaryNav/secondary-nav.scss
@@ -207,11 +207,6 @@
     }
   }
 
-  @include respond-to-range($bp-sm-min, $bp-sm-max) {
-    margin-left: -1.875rem;
-    margin-right: -1.875rem;
-  }
-
   // Desktop and above.
   @include respond-to-min($bp-med-min) {
     .o-secondary-nav {
